--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,17 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    knitr,
+    msigdbr,
+    rmarkdown,
+    SummarizedExperiment,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    foreach,
-    dplyr,
     HarmonicRegression,
-    doParallel
+    doParallel,
+    dplyr,
+    parallel
+VignetteBuilder: knitr
+Depends: 
+    foreach
